--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -1,20 +1,23 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: React CI/CD
+name: React CI
 
 on:
   push:
+    branches: [ deploy ]
+  pull_request:
     branches: [ deploy ]
 
 jobs:
   build:
 
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     strategy:
       matrix:
         node-version: [14.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - uses: actions/checkout@v3
@@ -26,4 +29,4 @@ jobs:
     - run: npm i
     - run: npm test
     - run: npm run build 
-
+    
